--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kurogosane1/sequelizedDatBurger#readme",
   "dependencies": {
+    "Router": "^2.1.0",
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "express-handlebars": "^3.0.0",
