--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,17 @@
 {
   "development": {
-    "username": "ooxr66vdz8cnx1vr",
-    "password": "zd9p7rkmbnraoytq",
-    "database": "anbdil1wm5jvs67s",
-    "host": "d6ybckq58s9ru745.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "username": "",// Enter your own
+    "password": "",//Enter your own//
+    "database": "",//Enter your own//
+    "host": "",//Enter your own//
     "dialect": "mysql"
   },
   "test": {
-    "use_env_variable": "JAWSDB_URL",
+    "use_env_variable": "",//This place in what you receive either from heroku or other domain hosts//
     "dialect": "mysql"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "use_env_variable": "",//This place in what you receive either from heroku or other domain hosts//
     "dialect": "mysql"
   }
 }
